商店界面的卡牌商品现为动态显示和刷新。